[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/Shots/LaserShot.gd" type="Script" id=1]

[node name="LaserShot" type="Node2D"]
script = ExtResource( 1 )

[node name="LaserEffect" type="Area2D" parent="."]
collision_layer = 128
gravity = 0.0

[node name="LaserCollision" type="CollisionPolygon2D" parent="LaserEffect"]
polygon = PoolVector2Array( 0, -1, 2000, -1, 2000, 1, 0, 1 )

[node name="Laser" type="Polygon2D" parent="."]
color = Color( 0.956863, 0, 0, 0.760784 )
polygon = PoolVector2Array( 0, -1, 2000, -1, 2000, 1, 0, 1 )

[node name="Warning" type="Polygon2D" parent="."]
color = Color( 0.478431, 0, 0.956863, 1 )
polygon = PoolVector2Array( 0, -1, 2000, -1, 2000, 1, 0, 1 )

[node name="WarningTime" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="WarningTime" to="." method="_on_WarningTime_timeout"]
